syntax = "proto3";

package forgotpasswordpb;

message ForgotPasswordRequest{
    string email = 1;
    string phone = 2;
}

message ForgotPasswordResponse{
    string message = 1;
    int32 code = 2;
    string verify_code = 3;
}

service ForgotPasswordService{
    rpc ForgotPassowrdUserService (ForgotPasswordRequest) returns (ForgotPasswordResponse){}
}